[package]
name = "llehs"
version = "0.1.0"
edition = "2021"

[dependencies]
reedline = { version = "0.26.0", features = ["bash"] }
nix = { version = "0.29.0", features = ["process", "user"] }
signal-hook = "0.3.17"
rayon = "1.10.0"
wasmtime = "18.0.3"
miette = { version = "7.2.0", features = ["fancy"] }
notify-rust = "4.11.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
shellexpand = "3.1.0"
directories = "5.0.1"
regex = "1.10.3"
clap = { version = "4.5.1", features = ["derive"] }
comfy-table = "7.1.0"
which = "5.0.0"
git2 = "0.18.2"
colored = "2.1.0"
